--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
   </header> 
   <div class="container"> 
    <div class="indikator"> 
-    <img src="images/TradingView_Screenshot_1729436139021.jpg" alt="Screenshot Konsep Likuiditas pada TradingView" class="banner"> 
+    <img src="https://drive.google.com/uc?export=view&id=1dAnWBYLMu_Wy2GIgKBrbsT9BWHfAF1hS" alt="Screenshot Konsep Likuiditas pada TradingView" class="banner"> 
     <h2>1. Konsep Likuiditas</h2> 
     <p><a href="https://www.tradingview.com/script/9WWJ0z8B-Liquidity-Concepts-Wahy-fx/" target="_blank">Lihat di TradingView</a></p> 
    </div> 
    <div class="indikator"> 
-    <img src="images/TradingView_Screenshot_1729436178685.jpg" alt="Screenshot Killzones pada TradingView" class="banner"> 
+    <img src="https://drive.google.com/uc?export=view&id=1dGhhUAZIk-wXAcWuzljh5T-Qf-UThAy9" alt="Screenshot Killzones pada TradingView" class="banner"> 
     <h2>2. Killzones</h2> 
     <p><a href="https://www.tradingview.com/script/FxogP4Z6-Killzones-by-Wahy-fx/" target="_blank">Lihat di TradingView</a></p> 
    </div> 
