--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <p><a href="https://www.tradingview.com/script/9WWJ0z8B-Liquidity-Concepts-Wahy-fx/" target="_blank">Lihat di TradingView</a></p> 
    </div> 
    <div class="indikator"> 
-    <img src="https://drive.google.com/uc?export=view&id=1dGhhUAZIk-wXAcWuzljh5T-Qf-UThAy9" alt="Screenshot Killzones pada TradingView" class="banner"> 
+    <img src="https://drive.google.com/thumbnail?id=1dGhhUAZIk-wXAcWuzljh5T-Qf-UThAy9" alt="Screenshot Killzones pada TradingView" class="banner"> 
     <h2>2. Killzones</h2> 
     <p><a href="https://www.tradingview.com/script/FxogP4Z6-Killzones-by-Wahy-fx/" target="_blank">Lihat di TradingView</a></p> 
    </div> 
